Initial rewrite of MMapDirectory for JDK-19 preview Panama APIs (>= JDK-19-ea+23)